# xdrlib3

./: README.md  pyproject.toml
.github/workflows/: python-package.yml
tests/: __init__.py
xdrlib3/: __init__.py
