[tool.poetry]
name = "xdrlib3"
version = "0.1.1"
description = "A forked version of `xdrlib`, a module for encoding and decoding XDR (External Data Representation) data in Python."
authors = ["overcat <4catcode@gmail.com>"]
readme = "README.md"
maintainers = ["overcat <4catcode@gmail.com>"]
homepage = "https://github.com/overcat/xdrlib3"
repository = "https://github.com/overcat/xdrlib3"
documentation = "https://github.com/overcat/xdrlib3"
keywords = [
    "xdrlib",
    "xdr",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/overcat/xdrlib3/issues"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
